# photogrammabot_pub

./: .gitignore  .gitmodules  Readme.md
automation/: install_requirements_melodic.bash  on_turtlebot.bash  setup.bash
automation/Desktop/: shutdown.desktop  turret_test.desktop  turtlebot_dashboard.sh  visualization.desktop
automation/usb_rules/: 99-usb-serial.rules
documentation/draw.io/: IW Photogrammabot.drawio
env/: pgbot_env.sh
pgbot_bringup/: CMakeLists.txt  package.xml
pgbot_bringup/gazebo/: test_room_1.world  test_room_scat.world  test_room_scat2.world  test_room_scat_fin.world
pgbot_bringup/rviz/: tb.rviz  (+1 more)
pgbot_camera_control/: CMakeLists.txt  package.xml
pgbot_exploration/: CMakeLists.txt  package.xml
pgbot_kobuki_interface/: CMakeLists.txt  package.xml
pgbot_localization/: CMakeLists.txt  package.xml
pgbot_robot_description/: CMakeLists.txt  package.xml
pgbot_turret_control/: CMakeLists.txt  package.xml
phantomx_turret/: CMakeLists.txt  README.md  package.xml
phantomx_turret/arduino/: CMakeLists.txt  phantomx_turret.cpp
phantomx_turret/arduino/arbotix/hardware/arbotix/cores/arbotix/: HardwareSerial.cpp  HardwareSerial.h
phantomx_turret/launch/: phantomx_turret.launch  phantomx_turret.rviz  phantomx_turret_rviz.launch  phantomx_turret_teleop.launch  phantomx_turret_world.launch
phantomx_turret/meshes/: AX-12A-Fixed.stl  AX-12A-Rotating.stl  AX-12A.stl  Camera.stl  F2-Bracket.stl  F3-Bracket.stl  Head.stl
phantomx_turret/urdf/: pan_tilt_hardware.xacro  phantomx_turret.urdf.xacro
phantomx_turret/worlds/: phantomx_turret.world
(+51 files in other folders)
