<?xml version="1.0"?>
<package>
  <name>phantomx_turret</name>
  <version>0.0.1</version>
  <description>Driver for Trossen Robotics PhantomX Robot Turret</description>

  <maintainer email="Christopher.Sacca@tufts.edu">Christopher Sacca</maintainer>

  <license>BSD</license>

  <url type="website">http://www.trossenrobotics.com/p/phantomX-robot-turret.aspx</url>

  <author email="Christopher.Sacca@tufts.edu">Christopher Sacca</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>rosserial_client</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <!-- <build_depend>message_generation</build_depend> -->
  <run_depend>rosserial_arduino</run_depend>
  <run_depend>rosserial_client</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <!-- <run_depend>message_runtime</run_depend> -->

</package>
